--- a/EZ Calorie/appsettings.Development.json
+++ b/EZ Calorie/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLExpress;database=EZCalorie;integrated security=true;"
+  },
+  "FirebaseProjectId": "ezcalorie-f3416"
 }
