--- a/EZ Calorie/appsettings.json
+++ b/EZ Calorie/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\SQLExpress;database=EZCalorie;integrated security=true;"
+  },
+  "FirebaseProjectId": "ezcalorie-f3416"
 }
